Add export function (backport from Pharo). Add ability to specify client-side formatter function.

--- a/BootstrapTable-Dolphin/SBSBootstrapTableApplicationExample.cls
+++ b/BootstrapTable-Dolphin/SBSBootstrapTableApplicationExample.cls
@@ -52,7 +52,7 @@ createTable
 		clickToSelect: true;
 		detailComponentClass: SBSTableExampleProductEditor;
 		option: #toolbar value: '#toolbar';
-		options: #(#showRefresh #showToggle #showFullscreen #showColumns #showColumnsToggleAll) value: true;
+		options: #(#showRefresh #showToggle #showFullscreen #showColumns #showColumnsToggleAll #showExport) value: true;
 
 		addRowSelector;
 		addColumn: 
