--- a/BootstrapTable-Dolphin/SBSJQueryCDNDeploymentLibrary.cls
+++ b/BootstrapTable-Dolphin/SBSJQueryCDNDeploymentLibrary.cls
@@ -14,9 +14,9 @@ SBSJQueryCDNDeploymentLibrary comment: ''!
 
 !SBSJQueryCDNDeploymentLibrary class methodsFor!
 
-cdnJSLocation	^'https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js'!
+cdnJSLocation	^'https://cdn.jsdelivr.net/npm/jquery@4.0.0/dist/jquery.min.js'!
 
-cdnJSLocationIntegrity	"Calculated via https://www.srihash.org"	^ 'sha384-1H217gwSVyLSIfaLxHbE7dRb3v4mYCKbpQvzx0cegeju1MVsGrX5xXxAvs/HgeFs'! !
+cdnJSLocationIntegrity	"Calculated via https://www.srihash.org"	^ 'sha384-fgGyf7Mo7DURSOMnOy7ed+dkq5Job205Gnzu6QIg0BOHKaqt4D76Dt8VlDCzcMHV'! !
 
 !SBSJQueryCDNDeploymentLibrary class categoriesForMethods!
 cdnJSLocation!accessing / defaults!public! !
